redis改为用jAVA配置，连接池换成lettuce

--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,8 +1,13 @@
-#redis.url=10.10.250.161:6379;10.10.250.162:6379;10.10.250.162:6380;10.10.250.163:6379;10.10.250.163:6380;10.10.250.161:6380
-redis.hostName=127.0.0.1
+redis.host=127.0.0.1
 redis.port=6379
 redis.password=Xingxing9725
-redis.maxIdle=300
-redis.maxTotal=300
-redis.maxWaitMillis=300
-redis.testOnBorrow=true
+redis.timeout=1000
+redis.redisDbIndex=0
+
+lettuce.pool.max-active=20
+lettuce.pool.max-idle=20
+lettuce.pool.min-idle=5
+lettuce.pool.max-wait=5000
+lettuce.pool.test-on-borrow=true
+lettuce.pool.test-while-idle=true
+lettuce.pool.shutdown-timeout=5000
