--- a/pom.xml
+++ b/pom.xml
@@ -143,28 +143,42 @@
       <version>${jackson.version}</version>
     </dependency>
 
-    <!-- redis -->
+    <!-- redis(使用lettuce连接池) -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
-      <version>2.2</version>
+      <version>2.8.0</version>
     </dependency>
     <dependency>
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-redis</artifactId>
-      <version>1.8.18.RELEASE</version>
+      <version>2.2.12.RELEASE</version>
     </dependency>
     <dependency>
-      <groupId>redis.clients</groupId>
-      <artifactId>jedis</artifactId>
-      <version>2.9.0</version>
+      <groupId>io.lettuce</groupId>
+      <artifactId>lettuce-core</artifactId>
+      <version>5.3.5.RELEASE</version>
     </dependency>
 
-    <!-- 上传工具类 -->
+    <!--上传工具类-->
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.3.3</version>
+    </dependency>
+
+    <!--commons-text(这个包包含了commons-lang3，所以不需要单独再引lang3了)-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.9</version>
+    </dependency>
+
+    <!--commons-collections4-->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-collections4</artifactId>
+      <version>4.4</version>
     </dependency>
 
   </dependencies>
