--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,7 +8,7 @@
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <!--spring和mybatis整合配置文件路径-->
-        <param-value>classpath:spring-mybatis.xml,classpath:spring-redis.xml</param-value>
+        <param-value>classpath:spring-mybatis.xml</param-value>
     </context-param>
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
