--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,20 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <!--统一配置jar包的版本-->
-    <mysql.version>5.1.47</mysql.version>
     <spring.version>5.2.0.RELEASE</spring.version>
+    <mybatis-spring.version>1.3.2</mybatis-spring.version>
+    <mybatis.version>3.4.6</mybatis.version>
+    <mysql.version>5.1.47</mysql.version>
+    <druid.version>1.1.12</druid.version>
     <jackson.version>2.9.0</jackson.version>
+    <aspectj.version>1.9.4</aspectj.version>
+    <cglib.version>3.1</cglib.version>
+
+
+    <commons-fileupload.version>1.3.3</commons-fileupload.version>
+    <commons-text.version>1.9</commons-text.version>
+    <commons-collections4.version>4.4</commons-collections4.version>
+    <commons-beanutils.version>1.9.4</commons-beanutils.version>
   </properties>
 
   <dependencies>
@@ -47,12 +58,12 @@
     <dependency>
       <groupId>org.aspectj</groupId>
       <artifactId>aspectjweaver</artifactId>
-      <version>1.9.4</version>
+      <version>${aspectj.version}</version>
     </dependency>
     <dependency>
       <groupId>cglib</groupId>
       <artifactId>cglib</artifactId>
-      <version>3.1</version>
+      <version>${cglib.version}</version>
     </dependency>
     <!--Spring Jms依赖-->
     <dependency>
@@ -94,21 +105,28 @@
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>druid</artifactId>
-      <version>1.1.12</version>
+      <version>${druid.version}</version>
     </dependency>
 
     <!-- Mybatis必备依赖包 -->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis</artifactId>
-      <version>3.4.6</version>
+      <version>${mybatis.version}</version>
     </dependency>
 
     <!--配置Spring整合mybatis的jar包-->
     <dependency>
       <groupId>org.mybatis</groupId>
       <artifactId>mybatis-spring</artifactId>
-      <version>1.3.2</version>
+      <version>${mybatis-spring.version}</version>
+    </dependency>
+
+    <!--pagehelper-mybatis分页插件-->
+    <dependency>
+      <groupId>com.github.pagehelper</groupId>
+      <artifactId>pagehelper</artifactId>
+      <version>5.0.1</version>
     </dependency>
 
     <!-- servlet 依赖包 -->
@@ -164,21 +182,54 @@
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
-      <version>1.3.3</version>
+      <version>${commons-fileupload.version}</version>
     </dependency>
 
     <!--commons-text(这个包包含了commons-lang3，所以不需要单独再引lang3了)-->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-text</artifactId>
-      <version>1.9</version>
+      <version>${commons-text.version}</version>
     </dependency>
 
     <!--commons-collections4-->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-collections4</artifactId>
-      <version>4.4</version>
+      <version>${commons-collections4.version}</version>
+    </dependency>
+
+    <!-- bean工具包commons-beanutils -->
+    <dependency>
+      <groupId>commons-beanutils</groupId>
+      <artifactId>commons-beanutils</artifactId>
+      <version>${commons-beanutils.version}</version>
+    </dependency>
+
+
+    <!-- swagger-ui插件 -->
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger-ui</artifactId>
+      <version>2.9.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>io.springfox</groupId>
+      <artifactId>springfox-swagger2</artifactId>
+      <version>2.9.2</version>
+      <exclusions>
+        <exclusion>
+          <groupId>io.swagger</groupId>
+          <artifactId>swagger-models</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+
+    <dependency>
+      <groupId>io.swagger</groupId>
+      <artifactId>swagger-models</artifactId>
+      <version>1.5.21</version>
     </dependency>
 
   </dependencies>
