增加<!-- session配置 -->       <session-config>           <session-timeout>30</session-timeout>       </session-config>配置

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -57,4 +57,9 @@
         <param-value>classpath:logback.xml</param-value>
     </context-param>
 
+    <!--5.session配置-->
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+
 </web-app>
