增加动态数据源的配置

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,9 @@
-jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/shopmanage?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
-jdbc.username=root
-jdbc.password=199725
+master.jdbc.driver=com.mysql.jdbc.Driver
+master.jdbc.url=jdbc:mysql://localhost:3306/shopmanage?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+master.jdbc.username=root
+master.jdbc.password=199725
+
+slave.jdbc.driver=com.mysql.jdbc.Driver
+slave.jdbc.url=jdbc:mysql://localhost:3306/shopmanage2?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+slave.jdbc.username=root
+slave.jdbc.password=199725
