更改文件的编码

--- a/src/main/resources/xssconfig.properties
+++ b/src/main/resources/xssconfig.properties
@@ -1,5 +1,5 @@
-#·ÀÖ¹XSS¹¥»÷
-# ¹ıÂË¿ª¹Ø
+# é˜²æ­¢XSSæ”»å‡»
+# è¿‡æ»¤å¼€å…³
 xss.enabled=true
-# ÅÅ³ıÁ´½Ó£¨¶à¸öÓÃ¶ººÅ·Ö¸ô£©
+# æ’é™¤é“¾æ¥ï¼ˆå¤šä¸ªç”¨é€—å·åˆ†éš”ï¼‰
 xss.excludes=/syspermission/*,/sysuser/*
