--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <jackson.version>2.10.5</jackson.version>
     <aspectj.version>1.9.4</aspectj.version>
     <cglib.version>3.1</cglib.version>
+    <shiro.version>1.9.1</shiro.version>
 
     <commons-fileupload.version>1.3.3</commons-fileupload.version>
     <commons-text.version>1.9</commons-text.version>
@@ -185,6 +186,18 @@
       <version>5.3.5.RELEASE</version>
     </dependency>
 
+    <!-- shiro(会话认证) -->
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-quartz</artifactId>
+      <version>${shiro.version}</version>
+    </dependency>
+
     <!--上传工具类-->
     <dependency>
       <groupId>commons-fileupload</groupId>
@@ -306,7 +319,7 @@
             <contextPath>/bluewind-base</contextPath>
           </webApp>
           <httpConnector>
-            <port>8082</port>
+            <port>8083</port>
           </httpConnector>
         </configuration>
       </plugin>
