--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,5 +1,5 @@
 master.jdbc.driver=com.mysql.jdbc.Driver
-master.jdbc.url=jdbc:mysql://localhost:3306/shopmanage?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+master.jdbc.url=jdbc:mysql://localhost:3306/bluewind-base?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
 master.jdbc.username=root
 master.jdbc.password=199725
 
