--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -15,11 +15,19 @@
             classpath:spring-shiro.xml
         </param-value>
     </context-param>
+
+    <!--2.配置使用logback日志-->
+    <context-param>
+        <param-name>logbackConfigLocation</param-name>
+        <param-value>classpath:logback.xml</param-value>
+    </context-param>
+
+    <!--3.配置监听-->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
 
-    <!--2.配置SpringMVC的前端控制器-->
+    <!--4.配置SpringMVC的前端控制器-->
     <servlet>
         <servlet-name>SpringMVC</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
@@ -35,7 +43,7 @@
         <url-pattern>/</url-pattern>
     </servlet-mapping>
 
-    <!--3.配置字符编码过滤器-->
+    <!--5.配置字符编码过滤器-->
     <filter>
         <filter-name>encodingFilter</filter-name>
         <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
@@ -53,7 +61,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!-- shiroFilter : DelegatingFilterProxy作用是自动到spring容器查找名字为shiroFilter（filter-name）的bean并把所有Filter的操作委托给它。然后将shiroFilter配置到spring容器即可 -->
+    <!--6.配置shiroFilter: DelegatingFilterProxy作用是自动到spring容器查找名字为shiroFilter（filter-name）的bean并把所有Filter的操作委托给它。然后将shiroFilter配置到spring容器即可 -->
     <filter>
         <filter-name>shiroFilter</filter-name>
         <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
@@ -67,13 +75,7 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
-    <!--4.配置使用logback日志-->
-    <context-param>
-        <param-name>logbackConfigLocation</param-name>
-        <param-value>classpath:logback.xml</param-value>
-    </context-param>
-
-    <!--5.配置session超时时间-->
+    <!--7.配置session超时时间-->
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
