--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -1,9 +1,29 @@
-redis.host=127.0.0.1
-redis.port=6379
-redis.password=Xingxing9725
+
+#单机配置
+#redis.type=standalone
+#redis.url=127.0.0.1:6379
+#redis.password=Xingxing9725
+#redis.timeout=1000
+#redis.redisDbIndex=0
+
+
+#集群配置
+redis.type=cluster
+redis.url=10.10.250.161:6379;10.10.250.161:6380;10.10.250.162:6379;10.10.250.162:6380;10.10.250.163:6379;10.10.250.163:6380
+redis.password=10Passw0rd
 redis.timeout=1000
 redis.redisDbIndex=0
 
+
+#哨兵配置
+#redis.type=sentinel
+#redis.url=127.0.0.1:26379;127.0.0.1:26380;127.0.0.1:26381
+#redis.password=10Passw0rd
+#redis.timeout=1000
+#redis.redisDbIndex=0
+
+
+# 连接池配置
 lettuce.pool.max-active=20
 lettuce.pool.max-idle=20
 lettuce.pool.min-idle=5
