--- a/pom.xml
+++ b/pom.xml
@@ -169,7 +169,7 @@
       <version>${jackson.version}</version>
     </dependency>
 
-    <!-- redis(使用lettuce连接池) -->
+    <!-- redis支持(使用lettuce连接池) -->
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-pool2</artifactId>
@@ -186,7 +186,7 @@
       <version>5.3.5.RELEASE</version>
     </dependency>
 
-    <!-- shiro(会话认证) -->
+    <!-- shiro(安全框架) -->
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-spring</artifactId>
