--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -23,7 +23,7 @@ redis.redisDbIndex=0
 #redis.redisDbIndex=0
 
 
-# 连接池配置
+# 连接池配置（公共）
 lettuce.pool.max-active=20
 lettuce.pool.max-idle=20
 lettuce.pool.min-idle=5
