--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -10,7 +9,8 @@
   <packaging>war</packaging>
 
   <name>bluewind-base Maven Webapp</name>
-  <url>http://www.example.com</url>
+  <description>bluewind-base基础集成框架</description>
+  <url>https://www.bluewind-base.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,7 +18,7 @@
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <!--统一配置jar包的版本-->
-    <spring.version>5.2.0.RELEASE</spring.version>
+    <spring.version>5.2.12.RELEASE</spring.version>
     <mybatis-spring.version>1.3.2</mybatis-spring.version>
     <mybatis.version>3.4.6</mybatis.version>
     <mysql.version>5.1.47</mysql.version>
@@ -325,6 +325,5 @@
       </plugin>
     </plugins>
   </build>
-
 
 </project>
