--- a/src/main/resources/redis.properties
+++ b/src/main/resources/redis.properties
@@ -2,7 +2,7 @@
 #单机配置
 #redis.type=standalone
 #redis.url=127.0.0.1:6379
-#redis.password=Xingxing9725
+#redis.password=123654
 #redis.timeout=1000
 #redis.redisDbIndex=0
 
