--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -4,6 +4,6 @@ master.jdbc.username=root
 master.jdbc.password=123654
 
 slave.jdbc.driver=com.mysql.jdbc.Driver
-slave.jdbc.url=jdbc:mysql://localhost:3306/shopmanage2?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+slave.jdbc.url=jdbc:mysql://localhost:3306/bluewind-base?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
 slave.jdbc.username=root
 slave.jdbc.password=123654
